Make JVM aware of Docker container memory size
See https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits for details.